# ironPad

./: .gitignore  LICENSE  README.md  ROADMAP.md  ai-context.md
.ferrite/: state.json  terminal-layout.json
.github/workflows/: ci.yml  release.yml
backend/: Cargo.toml
backend/src/: config.rs  main.rs  watcher.rs  websocket.rs
backend/src/models/: mod.rs  note.rs  project.rs  task.rs
backend/src/routes/: assets.rs  daily.rs  git.rs  mod.rs  notes.rs  projects.rs  search.rs  tasks.rs
backend/src/services/: filesystem.rs  frontmatter.rs  git.rs  locks.rs  mod.rs  search.rs
docs/: API.md  ARCHITECTURE.md  system-tray-implementation.md
docs/ai-workflow/: CHECKLIST.md  HANDOVER.md  PRD.md  README.md  lessons-learned.md  method.md  tools.md
docs/ai-workflow/.ferrite/: state.json
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  style.css
frontend/src/api/: client.ts
frontend/src/components/: ConflictBanner.vue  EditorToolbar.vue  GitPanel.vue  GitStatus.vue  MarkdownEditor.vue  MarkdownPreview.vue  MilkdownEditor.vue  MilkdownEditorCore.vue  NoteList.vue  ProjectList.vue  ReadOnlyBanner.vue  SearchPanel.vue  Sidebar.vue  TaskPanel.vue  TopBar.vue
frontend/src/composables/: useWebSocket.ts
frontend/src/router/: index.ts
frontend/src/stores/: git.ts  index.ts  notes.ts  projects.ts  tasks.ts  theme.ts  ui.ts  websocket.ts  workspace.ts
frontend/src/types/: index.ts
frontend/src/views/: CalendarView.vue  DailyView.vue  DashboardView.vue  NotesView.vue  ProjectNotesView.vue  ProjectView.vue  (+2 more)
